--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 Django==3.2.21
 django-allauth==0.41.0
+django-crispy-forms==1.14.0
 oauthlib==3.2.2
 Pillow==10.0.0
 python3-openid==3.2.0
